@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - remove dep on strictures/autodie to get greater stability on perl 5.8
 
 1.132073  2013-07-26 19:38:32 Europe/Berlin
  - more doc fixes
